Overflow hack fix

--- a/mystyle.css
+++ b/mystyle.css
@@ -14,11 +14,14 @@ h3.list-item-name{
 }
 h4.list-item-author{
 	color: #551a8b;
-    font-size: 20px;
     margin: 0 0 0.5em;
     padding: 0;
 	text-align: right;
 	float: right;
+}
+h4.list-item-author{
+
+    font-size: 20px;
 }
 p.list-item-syn{
     color: rgba(0,0,0,0.6);
